--- a/index.html
+++ b/index.html
@@ -50,12 +50,6 @@ button {
 }
 button:active { transform: scale(0.97); }
 
-.message {
-    margin-top: 10px;
-    font-size: 15px;
-    line-height: 1.5;
-}
-
 .footer {
     margin-top: 10px;
     font-size: 12px;
@@ -63,32 +57,25 @@ button:active { transform: scale(0.97); }
 }
 
 /* IMAGES */
-.bottom-left-img {
+.bottom-left-img, .top-left-img {
     position: fixed;
+    border-radius: 20px;
+    opacity: 0.98;
+    pointer-events: none;
+    z-index: 999;
+    transition: opacity 0.25s ease;
+}
+
+.bottom-left-img {
     bottom: 20px;
     left: 20px;
     width: 140px;
-    max-width: 140px !important;
-    border-radius: 20px;
-    opacity: 0.98;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-    pointer-events: none;
-    z-index: 999;
-    transition: opacity 0.2s ease;
 }
 
 .top-left-img {
-    position: fixed;
     top: 20px;
     left: 20px;
     width: 120px;
-    max-width: 120px !important;
-    border-radius: 20px;
-    opacity: 0.98;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-    pointer-events: none;
-    z-index: 999;
-    transition: opacity 0.2s ease;
 }
 </style>
 </head>
@@ -107,25 +94,39 @@ button:active { transform: scale(0.97); }
 
 <!-- MAIN PAGE -->
 <div id="mainPage" class="box">
-    <div class="heart">♡♡♡</div>
     <h1>Hi, beautiful boy.</h1>
-    <p class="message">
+    <p>
         This page is made just for you.<br>
         Thank you for being part of my life.<br>
         You make everything softer and better.
     </p>
 
-    <button onclick="toggleSecret()">Tap here for a secret message</button>
-
-    <p id="secret" class="message" style="display:none;">
-        No matter how tired or stressed you feel,<br>
-        I always choose you. ♡
-    </p>
+    <button onclick="goSecret()">Tap here for a secret message</button>
 
     <div class="footer">
         Made with love · <span id="dateNow"></span>
     </div>
 </div>
+
+<!-- SECRET PAGE (NEXT PAGE) -->
+<div id="secretPage" class="box">
+    <h2>My Secret Message For You 💙</h2>
+    <p style="line-height:1.6;">
+        I don’t say this often,<br>
+        but I hope you know something.<br><br>
+
+        You make my days softer just by existing.<br>
+        You make everything feel safe.<br><br>
+
+        And I’ll keep choosing you,<br>
+        even on the days you don’t feel good enough.<br><br>
+
+        — Tae Jun
+    </p>
+
+    <button onclick="goBack()">Go Back</button>
+</div>
+
 
 <script>
 const correctPassword = "18042001";
@@ -134,7 +135,7 @@ function startMusic() {
     const bgm = document.getElementById("bgm");
     if (bgm.paused) {
         bgm.volume = 0.8;
-        bgm.play().catch(() => {});
+        bgm.play().catch(()=>{});
     }
 }
 
@@ -143,45 +144,41 @@ function checkPass() {
     startMusic();
 
     if (input === correctPassword) {
-        // show main, hide password card
         document.getElementById("passwordPage").style.display = "none";
         document.getElementById("mainPage").classList.add("show");
-        document.getElementById("wrong").style.display = "none";
 
-        // fade out images + disable pointer events
+        // Fade out images
         const bottomImg = document.querySelector(".bottom-left-img");
         const topImg = document.querySelector(".top-left-img");
 
-        if (bottomImg) {
-            bottomImg.style.opacity = "0";
-            bottomImg.style.pointerEvents = "none";
-        }
-        if (topImg) {
-            topImg.style.opacity = "0";
-            topImg.style.pointerEvents = "none";
-        }
+        if (bottomImg) bottomImg.style.opacity = "0";
+        if (topImg) topImg.style.opacity = "0";
 
         setTimeout(() => {
             if (bottomImg) bottomImg.style.display = "none";
             if (topImg) topImg.style.display = "none";
         }, 250);
+
     } else {
         document.getElementById("wrong").style.display = "block";
     }
 }
 
-function toggleSecret() {
-    let s = document.
-
-getElementById("secret");
-    s.style.display = (s.style.display === "none" || s.style.display === "") ? "block" : "none";
+function goSecret() {
+    document.getElementById("mainPage").style.display = "none";
+    document.getElementById("secretPage").style.display = "block";
 }
 
-// allow pressing Enter key in the input
-document.addEventListener("DOMContentLoaded", () => {
-    const passInput = document.getElementById("pass");
-    passInput.addEventListener("keydown", (e) => {
-        if (e.key === "Enter") {
+function goBack() {
+    document.getElementById("secretPage").style.display = "none";
+    document.getElementById("mainPage").style.display = "block";
+}
+
+document.addEventListener("DOMContentLoaded", ()=>{
+    document.
+
+getElementById("pass").addEventListener("keydown", (e)=>{
+        if(e.key === "Enter"){
             e.preventDefault();
             checkPass();
         }
