--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>For You ♡</title>
+<title>For My Baobei ❤️❤️</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
@@ -86,7 +86,7 @@ button:active { transform: scale(0.97); }
 
 <!-- PASSWORD PAGE -->
 <div id="passwordPage" class="box show">
-    <h2>Enter the password, love 💙</h2>
+    <h2>Enter the password babyy 😘😘</h2>
     <input type="password" id="pass" placeholder="Password">
     <button onclick="checkPass()">Enter</button>
     <p id="wrong" style="color:red; display:none;">Wrong password, try again.</p>
@@ -94,11 +94,11 @@ button:active { transform: scale(0.97); }
 
 <!-- MAIN PAGE -->
 <div id="mainPage" class="box">
-    <h1>Hi, beautiful boy.</h1>
+    <h1>Hi my beautiful, handsome, caring, romantic boy😍😍</h1>
     <p>
-        This page is made just for you.<br>
-        Thank you for being part of my life.<br>
-        You make everything softer and better.
+        This page is made just for you eventhough not so good HAHAHA <br>
+        Thank you for being part of my life <br>
+        You make my meaningful and better hehe
     </p>
 
     <button onclick="goSecret()">Tap here for a secret message</button>
@@ -110,18 +110,19 @@ button:active { transform: scale(0.97); }
 
 <!-- SECRET PAGE (NEXT PAGE) -->
 <div id="secretPage" class="box">
-    <h2>My Secret Message For You 💙</h2>
+    <h2> For my mannnnn❤️❤️</h2>
     <p style="line-height:1.6;">
-        I don’t say this often,<br>
-        but I hope you know something.<br><br>
+      i wanna tell you that...<br>
+        im so grateful to have you in my life babyyy..thank you so much for having me in your life<br><br>
 
-        You make my days softer just by existing.<br>
-        You make everything feel safe.<br><br>
+        you make my life better everyday and everyday i thank god for letting me to have you in my lifee<br>
+        you make me feel safe, loved and feel how does it feels to have someone that love me genuinely <br><br>
 
-        And I’ll keep choosing you,<br>
-        even on the days you don’t feel good enough.<br><br>
+        wtv it is i will keep on choosing you baby..no matter what i will try to reflect back and ik i will always
+        choose you in my life baby...i love you soo much my darlinggg hehehe<br>
+        will love youuu everyday and any times even on the days you dont feel good enough hehehe<br><br>
 
-        — Tae Jun
+        
     </p>
 
     <button onclick="goBack()">Go Back</button>
