--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ button:active { transform: scale(0.97); }
         You make my meaningful and better hehe
     </p>
 
-    <button onclick="goSecret()">Tap here for a secret message</button>
+    <button onclick="goSecret()">Tap here for more</button>
 
     <div class="footer">
-        Made with love · <span id="dateNow"></span>
+        Made by Park Tae Jun · <span id="dateNow"></span>
     </div>
 </div>
 
