--- a/baby/index.html
+++ b/baby/index.html
@@ -1,85 +1,83 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>For My Baby ❤️</title>
 <style>
-    body {
-        margin: 0;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #f5efe6;
-        font-family: 'Georgia', serif;
-    }
+body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f5efe6;
+    font-family: 'Georgia', serif;
+}
 
-    .book {
-        width: 320px;
-        height: 420px;
-        perspective: 1200px;
-    }
+.book {
+    width: 500px;  /* Lebar lebih besar */
+    height: 600px; /* Tinggi lebih besar */
+    perspective: 1500px;
+    position: relative;
+}
 
-    .page {
-        width: 100%;
-        height: 100%;
-        background: #fffaf0;
-        border: 1px solid #d8cfc4;
-        box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-        position: absolute;
-        transform-origin: left;
-        transition: transform 1s ease;
-        padding: 30px;
-        box-sizing: border-box;
-    }
+.page {
+    width: 100%;
+    height: 100%;
+    background: #fffaf0;
+    border: 1px solid #d8cfc4;
+    box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+    position: absolute;
+    transform-origin: left;
+    transition: transform 1s ease;
+    padding: 50px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
 
-    .page h1 {
-        text-align: center;
-        color: #6b4f4f;
-    }
+.page h1 {
+    text-align: center;
+    color: #6b4f4f;
+    font-size: 36px;
+}
 
-    .page p {
-        color: #5a4a42;
-        line-height: 1.6;
-        white-space: pre-line;
-    }
+.page p {
+    color: #5a4a42;
+    line-height: 1.8;
+    white-space: pre-line;
+    font-size: 18px;
+}
 
-    .page1 {
-        z-index: 2;
-    }
+.page1 { z-index: 2; }
+.page2 { transform: rotateY(-180deg); background: #fff7e6; }
 
-    .page2 {
-        transform: rotateY(-180deg);
-        background: #fff7e6;
-    }
+.book.flipped .page1 { transform: rotateY(-180deg); }
+.book.flipped .page2 { transform: rotateY(0deg); z-index: 3; }
 
-    .book.flipped .page1 {
-        transform: rotateY(-180deg);
-    }
+.flip-btn {
+    position: absolute;
+    bottom: -80px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #c97c5d;
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+}
 
-    .book.flipped .page2 {
-        transform: rotateY(0deg);
-        z-index: 3;
-    }
+.flip-btn:hover { background: #b66a4e; }
 
-    .flip-btn {
-        position: absolute;
-        bottom: -60px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: #c97c5d;
-        color: white;
-        border: none;
-        padding: 12px 20px;
-        border-radius: 20px;
-        cursor: pointer;
-        font-size: 14px;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
-    .flip-btn:hover {
-        background: #b66a4e;
-    }
+@media (max-width: 550px) {
+    .book { width: 90%; height: 70%; }
+    .page { padding: 30px; }
+    .page h1 { font-size: 28px; }
+    .page p { font-size: 16px; }
+    .flip-btn { padding: 12px 20px; font-size: 14px; bottom: -60px; }
+}
 </style>
 </head>
 <body>
@@ -95,8 +93,7 @@
     <div class="page page2">
         <h1>💌</h1>
         <p>
-            <!-- ISI UCAPAN KAU KAT SINI -->
-
+            <!-- Kau boleh tulis ucapan kau kat sini -->
         </p>
     </div>
 </div>
@@ -104,9 +101,9 @@
 <button class="flip-btn" onclick="flipPage()">Flip Page</button>
 
 <script>
-    function flipPage() {
-        document.getElementById("book").classList.toggle("flipped");
-    }
+function flipPage() {
+    document.getElementById("book").classList.toggle("flipped");
+}
 </script>
 
 </body>
