--- a/baby/index.html
+++ b/baby/index.html
@@ -15,14 +15,14 @@ html, body {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    position: relative;
+    width: 500px;
+    height: 600px;
 }
 
 .book {
-    width: 500px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     perspective: 1500px;
     position: relative;
 }
@@ -60,26 +60,28 @@ html, body {
 .book.flipped .page1 { transform: rotateY(-180deg); }
 .book.flipped .page2 { transform: rotateY(0deg); z-index: 3; }
 
-.flip-btn {
-    margin-top: 30px;
-    background: #c97c5d;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 25px;
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 40px;
+    color: #c97c5d;
     cursor: pointer;
-    font-size: 16px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    user-select: none;
+    transition: color 0.2s;
 }
 
-.flip-btn:hover { background: #b66a4e; }
+.arrow:hover { color: #b66a4e; }
+
+.arrow-left { left: -60px; }
+.arrow-right { right: -60px; }
 
 @media (max-width: 550px) {
-    .book { width: 90%; height: 70%; }
+    .container { width: 90%; height: 70%; }
     .page { padding: 30px; }
     .page h1 { font-size: 28px; }
     .page p { font-size: 16px; }
-    .flip-btn { padding: 12px 20px; font-size: 14px; }
+    .arrow { font-size: 30px; left: -40px; right: -40px; }
 }
 </style>
 </head>
@@ -102,7 +104,9 @@ html, body {
         </div>
     </div>
 
-    <button class="flip-btn" onclick="flipPage()">Flip Page</button>
+    <!-- Arrows -->
+    <div class="arrow arrow-left" onclick="flipPage()">&#8592;</div>
+    <div class="arrow arrow-right" onclick="flipPage()">&#8594;</div>
 </div>
 
 <script>
