--- a/baby/index.html
+++ b/baby/index.html
@@ -68,13 +68,12 @@ html, body {
     color: #c97c5d;
     cursor: pointer;
     user-select: none;
-    transition: color 0.2s;
 }
-
-.arrow:hover { color: #b66a4e; }
 
 .arrow-left { left: -60px; }
 .arrow-right { right: -60px; }
+
+.arrow:hover { color: #b66a4e; }
 
 @media (max-width: 550px) {
     .container { width: 90%; height: 70%; }
@@ -99,12 +98,50 @@ html, body {
         <div class="page page2">
             <h1>💌</h1>
             <p>
-                <!-- Kau boleh tulis ucapan kau kat sini -->
+happy new year to my baby ❤️❤️  
+i love youuu sooo much hehehe  
+
+thank you baby for being the love of my life.  
+i’m so grateful to have youu.
+
+eventhough 2025 so many things happened,  
+but it meant a lot to me.  
+the year i found my true love.  
+never know i gonna love someone very deeper  
+and the only person that i will always be with.
+
+thank you so much my baby.  
+i’m so sorry i cant be the best partner you ever had  
+and probably i’m the worst partner you ever be with,  
+but i’m also still learning  
+so i hope you can tolerate with me a bit more.
+
+i’m sorry my dear…  
+i’m so sorry if i can’t be the one like you want.  
+i admit i have so many things that i’m not good at.  
+i’m sorry baby… i’m so sorry.  
+
+i love you a lot.  
+and hopefully someday it will happen  
+that where you and i can spend time irl together.
+
+thank you for being patient with me.  
+thank you for being the best man i ever had hehehe.
+
+I love you a lot my Jadon Lim Yi Hao ❤️❤️❤️  
+
+my husband,  
+my boyfriend,  
+my baby,  
+my everything,  
+and my love of my life ❤️❤️  
+
+looking forward to have a good life with youuuu  
+muahhh 💋
             </p>
         </div>
     </div>
 
-    <!-- Arrows -->
     <div class="arrow arrow-left" onclick="flipPage()">&#8592;</div>
     <div class="arrow arrow-right" onclick="flipPage()">&#8594;</div>
 </div>
