--- a/baby/index.html
+++ b/baby/index.html
@@ -108,13 +108,13 @@ html, body {
         </div>
 
         <div class="page page2">
-            <h1>💌</h1>
+            <h1> to my husbaby ❤️❤️ </h1>
             <p>
 happy new year to my baby ❤️❤️  
 i love youuu sooo much hehehe  
 
 thank you baby for being the love of my life.  
-i’m so grateful to have youu.
+im so grateful to have youu.
 
 eventhough 2025 so many things happened,  
 but it meant a lot to me.  
@@ -122,22 +122,22 @@ the year i found my true love.
 never know i gonna love someone very deeper  
 and the only person that i will always be with.
 
-thank you so much my baby.  
-i’m so sorry i cant be the best partner you ever had  
+thank you so much my baby
+im so sorry i cant be the best partner you ever had  
 and probably i’m the worst partner you ever be with,  
 but i’m also still learning  
 so i hope you can tolerate with me a bit more.
 
-i’m sorry my dear…  
-i’m so sorry if i can’t be the one like you want.  
+im sorry my dear…  
+im so sorry if i can’t be the one like you want.  
 i admit i have so many things that i’m not good at.  
 i’m sorry baby… i’m so sorry.  
 
-i love you a lot.  
+i love you a lot
 and hopefully someday it will happen  
-that where you and i can spend time irl together.
+that where you and i can spend time irl together
 
-thank you for being patient with me.  
+thank you for being patient with me
 thank you for being the best man i ever had hehehe.
 
 I love you a lot my Jadon Lim Yi Hao ❤️❤️❤️  
