--- a/baby/index.html
+++ b/baby/index.html
@@ -101,7 +101,7 @@ html, body {
 <div class="container">
     <div class="book" id="book">
         <div class="page page1">
-            <h1>Happy New Year<br>to my baby 🎆❤️</h1>
+            <h1>Happy New Year<br>to my baby ❤️</h1>
             <p style="text-align:center; margin-top:40px;">
                 For The Best Husbaby In the World
             </p>
@@ -113,7 +113,7 @@ html, body {
 happy new year to my baby ❤️❤️  
 i love youuu sooo much hehehe  
 
-thank you baby for being the love of my life.  
+thank you baby for being the love of my life
 im so grateful to have youu
 
 eventhough 2025 so many things happened
