Update text and add autoplay music in index.html

--- a/baby/index.html
+++ b/baby/index.html
@@ -60,7 +60,7 @@ html, body {
     transform: rotateY(-180deg);
     background: #fff7e6;
     overflow-y: auto;
-    padding-right: 20px; /* supaya scrollbar tak tutup text */
+    padding-right: 20px;
 }
 
 .page2 p {
@@ -103,12 +103,12 @@ html, body {
         <div class="page page1">
             <h1>Happy New Year<br>to my baby ❤️</h1>
             <p style="text-align:center; margin-top:40px;">
-                For The Best Husbaby In the World
+                For The Best Husbaby In The Worldddd
             </p>
         </div>
 
         <div class="page page2">
-            <h1> to my husbaby ❤️❤️ </h1>
+            <h1> to my husbaby❤️❤️</h1>
             <p>
 happy new year to my baby ❤️❤️  
 i love youuu sooo much hehehe  
@@ -124,20 +124,20 @@ and the only person that i will always be with
 
 thank you so much my baby
 im so sorry i cant be the best partner you ever had  
-and probably im the worst partner you ever be with 
+and probably im the worst partner you ever be with
 but im also still learning  
 so i hope you can tolerate with me a bit more
 
 im sorry my dear…  
-im so sorry if i can’t be the one like you want 
-i admit i have so many things that im not good at
+im so sorry if i can’t be the one like you want
+i admit i have so many things that im not good at  
 im sorry baby… im so sorry
 
 i love you a lot
 and hopefully someday it will happen  
 that where you and i can spend time irl together
 
-thank you for being patient with me
+thank you for being patient with me 
 thank you for being the best man i ever had hehehe
 
 I love you a lot my Jadon Lim Yi Hao ❤️❤️❤️  
@@ -158,6 +158,11 @@ muahhh 💋
     <div class="arrow arrow-left" onclick="flipPage()">&#8592;</div>
     <div class="arrow arrow-right" onclick="flipPage()">&#8594;</div>
 </div>
+
+<!-- Music autoplay -->
+<audio id="loveSong" autoplay loop>
+  <source src="yung kai - blue (Lyrics).mp3" type="audio/mpeg">
+</audio>
 
 <script>
 function flipPage() {
